@@ -687,7 +687,7 @@ class csperror(ASMEndpoint):
     def post_all(self, o):
         asm3.al.error(str(self.data), "code.csperror", o.dbo)
         if EMAIL_ERRORS:
-            asm3.utils.send_email(o.dbo, ADMIN_EMAIL, ADMIN_EMAIL, "", "", "CSP violation", str(self.data), "plain", exceptions=False)
+            asm3.utils.send_email(o.dbo, ADMIN_EMAIL, ADMIN_EMAIL, "", "", "CSP violation", str(self.data), "plain", exceptions=False, bulk=True)
 
 class jserror(ASMEndpoint):
     """
@@ -706,7 +706,7 @@ class jserror(ASMEndpoint):
         logmess = "%s@%s: %s %s" % (post["user"], post["account"], post["msg"], post["stack"])
         asm3.al.error(logmess, "code.jserror", dbo)
         if EMAIL_ERRORS:
-            asm3.utils.send_email(dbo, ADMIN_EMAIL, ADMIN_EMAIL, "", "", emailsubject, emailbody, "plain", exceptions=False)
+            asm3.utils.send_email(dbo, ADMIN_EMAIL, ADMIN_EMAIL, "", "", emailsubject, emailbody, "plain", exceptions=False, bulk=True)
 
 class media(ASMEndpoint):
     url = "media"
